﻿﻿﻿                     wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.36 (Beta 3)
* Fixed FS#99 — "changes from menu editor remove all handlers."
^ Added a warning for unsupported properties.

03-19-2007 Version 3.00.35 (Beta 3)
+ Added wxColourPickerCtrl using source provided by vaius.

03-15-2007 Version 3.00.34 (Beta 3)
+ Added extra_style property to xrc. This resolves FS#163.
* Updated propgrid, which fixed FS#162 — "Changing font point
   size in properties panel causes font size to become huge."
^ Changed font size for xrc editor in gtk to match cpp editors.
^ Editors no longer move horizontal scrollbar when generating.
^ Added a mini wxFormBuilder used controls plug-in.
  It is disabled until a user downloads the wxAdditions plug-in
  from the website. (http://wxformbuilder.org/?page_id=30)
^ Now using wxWidgets v2.8.2.

03-09-2007 Version 3.00.33 (Beta 3)
+ Implemented FS#156 — "Ability to wrap generated code in namespace(s)"
   using patch supplied by kramar.
+ Implemented FS#157 — "Ability to decorate the generated class with dll export"
   using patch supplied by kramar.
+ Implemented FS#160 — "Support for namespaces for subclass forward declarations"
   using patch supplied by kramar.
* Fixed FS#161 — "Tag of items in wxCheckListBox."
^ Moved declaration of menus and submenus to header file.

03-07-2007 Version 3.00.32 (Beta 3)
^ New way to save propgrid values when using menu or toolbar items.
   Cleaner and cross-platform.

03-06-2007 Version 3.00.31 (Beta 3)
* Fixed FS#149 — "Double question whether you want to save a project on exit."
* Fixed FS#148 — "Different generated C++ and XRC file names for unnamed projects."
* Fixed FS#154 — "Crash when adding a sizer."
* Fixed FS#147 — "Accepting new property values when clicking on a menu/toolbar item."
^ Implemented FS#138 — "Select the 'next' control after deleting a control."

03-05-2007 Version 3.00.30 (Beta 3)